// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParameterSelection should render editDefinition 1`] = `
<div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
        Host Group
      </label>
      <div
        className="col-md-4"
      >
        <ExtSelect
          additionalData={
            Object {
              "clearRows": true,
              "url": "/acd/ui_acd_fdata/__id__",
            }
          }
          editable={false}
          hidden={false}
          onChange={[Function]}
          options={
            Object {
              "1": "centos7",
            }
          }
          selectValue="-1"
        />
        <RailsData
          key="hostgroup_id"
          parameter="hostgroup_id"
          value={-1}
          view="app_definition"
        />
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-1 control-label"
      >
        Application parameters
      </label>
      <div
        className="col-md-5"
      >
         
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <AddParameter
        disabled={true}
        hidden={false}
        onAddParameter={[Function]}
      />
      <TablePfProvider
        bordered={true}
        className=""
        columns={Array []}
        components={
          Object {
            "body": Object {
              "cell": [Function],
              "row": [Function],
            },
            "header": Object {
              "cell": [Function],
            },
          }
        }
        condensed={false}
        dataTable={true}
        hover={true}
        inlineEdit={true}
        striped={true}
      >
        <Header
          headerRows={
            Array [
              Array [],
            ]
          }
        />
        <Body
          onRow={[Function]}
          rowKey="id"
          rows={Array []}
        />
      </TablePfProvider>
      <AddParameter
        disabled={true}
        hidden={false}
        onAddParameter={[Function]}
      />
    </div>
    <RailsData
      key="applications_parameters"
      parameter="parameters"
      value="[]"
      view="app_definition"
    />
  </div>
</div>
`;

exports[`ParameterSelection should render editInstance 1`] = `
<div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
        Application Definition
      </label>
      <div
        className="col-md-4"
      >
        <ExtSelect
          additionalData={
            Object {
              "url": undefined,
            }
          }
          editable={false}
          hidden={false}
          onChange={[Function]}
          selectValue=""
          viewText=""
        />
        <RailsData
          key="definition_id"
          parameter="app_definition_id"
          value=""
          view="app_instance"
        />
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-1 control-label"
      >
        Application parameters
      </label>
      <div
        className="col-md-5"
      >
         
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <AddParameter
        disabled={true}
        hidden={true}
        onAddParameter={[Function]}
      />
      <TablePfProvider
        bordered={true}
        className=""
        columns={Array []}
        components={
          Object {
            "body": Object {
              "cell": [Function],
              "row": [Function],
            },
            "header": Object {
              "cell": [Function],
            },
          }
        }
        condensed={false}
        dataTable={true}
        hover={true}
        inlineEdit={true}
        striped={true}
      >
        <Header
          headerRows={
            Array [
              Array [],
            ]
          }
        />
        <Body
          onRow={[Function]}
          rowKey="id"
          rows={Array []}
        />
      </TablePfProvider>
      <AddParameter
        disabled={true}
        hidden={true}
        onAddParameter={[Function]}
      />
    </div>
    <RailsData
      key="applications_parameters"
      parameter="parameters"
      value="[]"
      view="app_instance"
    />
  </div>
</div>
`;

exports[`ParameterSelection should render newDefinition 1`] = `
<div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
        Host Group
      </label>
      <div
        className="col-md-4"
      >
        <ExtSelect
          additionalData={
            Object {
              "clearRows": true,
              "url": "/acd/ui_acd_fdata/__id__",
            }
          }
          editable={true}
          hidden={false}
          onChange={[Function]}
          options={
            Object {
              "1": "centos7",
            }
          }
          selectValue="-1"
        />
        <RailsData
          key="hostgroup_id"
          parameter="hostgroup_id"
          value={-1}
          view="app_definition"
        />
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-1 control-label"
      >
        Application parameters
      </label>
      <div
        className="col-md-5"
      >
         
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <AddParameter
        disabled={true}
        hidden={false}
        onAddParameter={[Function]}
      />
      <TablePfProvider
        bordered={true}
        className=""
        columns={Array []}
        components={
          Object {
            "body": Object {
              "cell": [Function],
              "row": [Function],
            },
            "header": Object {
              "cell": [Function],
            },
          }
        }
        condensed={false}
        dataTable={true}
        hover={true}
        inlineEdit={true}
        striped={true}
      >
        <Header
          headerRows={
            Array [
              Array [],
            ]
          }
        />
        <Body
          onRow={[Function]}
          rowKey="id"
          rows={Array []}
        />
      </TablePfProvider>
      <AddParameter
        disabled={true}
        hidden={false}
        onAddParameter={[Function]}
      />
    </div>
    <RailsData
      key="applications_parameters"
      parameter="parameters"
      value="[]"
      view="app_definition"
    />
  </div>
</div>
`;

exports[`ParameterSelection should render newInstance 1`] = `
<div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-2 control-label"
      >
        Application Definition
      </label>
      <div
        className="col-md-4"
      >
        <ExtSelect
          additionalData={
            Object {
              "url": "/acd/ui_acd_app/__id__",
            }
          }
          editable={true}
          hidden={false}
          onChange={[Function]}
          options={
            Object {
              "1": "Test123",
              "2": "sowasvonneu",
            }
          }
          selectValue=""
          viewText=""
        />
        <RailsData
          key="definition_id"
          parameter="app_definition_id"
          value=""
          view="app_instance"
        />
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <label
        className="col-md-1 control-label"
      >
        Application parameters
      </label>
      <div
        className="col-md-5"
      >
         
      </div>
    </div>
  </div>
  <div
    className="clearfix"
  >
    <div
      className="form-group"
    >
      <AddParameter
        disabled={true}
        hidden={true}
        onAddParameter={[Function]}
      />
      <TablePfProvider
        bordered={true}
        className=""
        columns={Array []}
        components={
          Object {
            "body": Object {
              "cell": [Function],
              "row": [Function],
            },
            "header": Object {
              "cell": [Function],
            },
          }
        }
        condensed={false}
        dataTable={true}
        hover={true}
        inlineEdit={true}
        striped={true}
      >
        <Header
          headerRows={
            Array [
              Array [],
            ]
          }
        />
        <Body
          onRow={[Function]}
          rowKey="id"
          rows={Array []}
        />
      </TablePfProvider>
      <AddParameter
        disabled={true}
        hidden={true}
        onAddParameter={[Function]}
      />
    </div>
    <RailsData
      key="applications_parameters"
      parameter="parameters"
      value="[]"
      view="app_instance"
    />
  </div>
</div>
`;
